--- a/index.html
+++ b/index.html
@@ -8,12 +8,14 @@
       src="https://kit.fontawesome.com/ba02caad33.js"
       crossorigin="anonymous"
     ></script>
+    <link rel="stylesheet" href="css/styles.css" />
     <title>Chats</title>
   </head>
   <body>
     <div class="status-bar">
-      <div class="status__column"></div>
+      <div class="status__column">
       <span class="status-bar__clock">13:54</span>
+      </div>
       <div class="status__column">
         <i class="far fa-clock"></i>
         <i class="fas fa-volume-mute"></i>
@@ -24,7 +26,7 @@
     </div>
     <header class="header">
       <div class="header__header-column">
-        <h1 class="header_title">Chats</h1>
+        <h1 class="header__title">Chats</h1>
       </div>
       <div class="div header__header-column">
         <span class="header__icon">
