--- a/friends.html
+++ b/friends.html
@@ -8,6 +8,7 @@
       src="https://kit.fontawesome.com/ba02caad33.js"
       crossorigin="anonymous"
     ></script>
+    <link rel="stylesheet" href="css/styles.css" />
     <title>Friends</title>
   </head>
   <body>
@@ -24,7 +25,7 @@
     </div>
     <header class="header">
       <div class="header__header-column">
-        <h1 class="header_title">Friends</h1>
+        <h1 class="header__title">Friends</h1>
       </div>
       <div class="div header__header-column">
         <span class="header__icon">
