--- a/settings.html
+++ b/settings.html
@@ -8,6 +8,7 @@
       src="https://kit.fontawesome.com/ba02caad33.js"
       crossorigin="anonymous"
     ></script>
+    <link rel="stylesheet" href="css/styles.css" />
     <title>Settings</title>
   </head>
   <body>
@@ -24,10 +25,10 @@
     </div>
     <header class="header">
       <div class="header__header-column">
-        <a href="more.html">
-          <i class="fas fa-arrow-left fa-2x"></i>
+        <a href="more.html" class="header__back-btn">
+          <i class="fas fa-arrow-left"></i>
         </a>
-        <h1 class="header_title">Settings</h1>
+        <h1 class="header__title">Settings</h1>
       </div>
       <div class="div header__header-column">
         <span class="header__icon">
