--- a/settings.html
+++ b/settings.html
@@ -13,8 +13,9 @@
   </head>
   <body>
     <div class="status-bar">
-      <div class="status__column"></div>
+      <div class="status__column">
       <span class="status-bar__clock">13:54</span>
+    </div>
       <div class="status__column">
         <i class="far fa-clock"></i>
         <i class="fas fa-volume-mute"></i>
@@ -40,7 +41,7 @@
       <section class="settings__sections">
         <ul class="settings__list">
           <li class="settings__setting">
-            <span class="serttings__icon">
+            <span class="settings__icon">
               <i class="fas fa-lock"></i>
             </span>
             <span class="settings__title">
@@ -48,7 +49,7 @@
             </span>
           </li>
           <li class="settings__setting">
-            <span class="serttings__icon">
+            <span class="settings__icon">
               <i class="far fa-bell"></i>
             </span>
             <span class="settings__title">
@@ -56,7 +57,7 @@
             </span>
           </li>
           <li class="settings__setting">
-            <span class="serttings__icon">
+            <span class="settings__icon">
               <i class="far fa-user"></i>
             </span>
             <span class="settings__title">
@@ -65,6 +66,34 @@
           </li>
         </ul>
       </section>
+      <section class="settings__sections">
+          <ul class="settings__list">
+            <li class="settings__setting">
+              <span class="settings__icon">
+                <i class="fas fa-lock"></i>
+              </span>
+              <span class="settings__title">
+                privacy
+              </span>
+            </li>
+            <li class="settings__setting">
+              <span class="settings__icon">
+                <i class="far fa-bell"></i>
+              </span>
+              <span class="settings__title">
+                Notification
+              </span>
+            </li>
+            <li class="settings__setting">
+              <span class="settings__icon">
+                <i class="far fa-user"></i>
+              </span>
+              <span class="settings__title">
+                Friends
+              </span>
+            </li>
+          </ul>
+        </section>
     </main>
   </body>
 </html>
