--- a/chat.html
+++ b/chat.html
@@ -13,8 +13,9 @@
   </head>
   <body>
     <div class="status-bar">
-      <div class="status__column"></div>
+      <div class="status__column">
       <span class="status-bar__clock">13:54</span>
+    </div>
       <div class="status__column">
         <i class="far fa-clock"></i>
         <i class="fas fa-volume-mute"></i>
@@ -63,17 +64,17 @@
       </ul>
     </main>
     <div class="chat__write">
-      <div class="chat__wirte-column">
+      <div class="chat__write-column">
         <i class="far fa-plus-square"></i>
       </div>
-      <div class="chat__wirte-column">
+      <div class="chat__write-column">
         <input
           type="text"
           placeholder="Send message"
           class="chat__write-input /"
         />
       </div>
-      <div class="chat__wirte-column">
+      <div class="chat__write-column">
         <span class="chat__write-icon">
           <i class="far fa-smile-wink"></i>
         </span>
