--- a/find.html
+++ b/find.html
@@ -13,8 +13,9 @@
   </head>
   <body>
     <div class="status-bar">
-      <div class="status__column"></div>
+      <div class="status__column">
       <span class="status-bar__clock">13:54</span>
+    </div>
       <div class="status__column">
         <i class="far fa-clock"></i>
         <i class="fas fa-volume-mute"></i>
@@ -82,7 +83,7 @@
         </h5>
         <li class="find__fried friend friend--lg">
           <div class="div friend__column">
-            <img src="Dublin.PNG" class="g-avatar friends__avatar" />
+            <img src="Dublin.PNG" class="friend__avatar" />
             <div class="friend__content">
               <span class="friend__name">
                 Dublin
