--- a/friends.html
+++ b/friends.html
@@ -12,9 +12,10 @@
     <title>Friends</title>
   </head>
   <body>
-    <div class="status-bar">
-      <div class="status__column"></div>
-      <span class="status-bar__clock">13:54</span>
+      <div class="status-bar">
+          <div class="status__column">
+          <span class="status-bar__clock">13:54</span>
+        </div>
       <div class="status__column">
         <i class="far fa-clock"></i>
         <i class="fas fa-volume-mute"></i>
@@ -41,14 +42,14 @@
     </header>
     <main class="friends">
       <header class="friends__header">
-        <div class="frieds__fried friend friend--lg">
+        <div class="friends__friend friend friend--lg">
           <div class="friend__column">
-            <img src="Dublin.PNG" class="g-avatar friends__avatar" />
+            <img src="Dublin.PNG" class="g-avatar friend__avatar" />
             <div class="friend__content">
               <span class="friend__name">
                 Dublin
               </span>
-              <span class="friend__name">
+              <span class="friend__status">
                 Here is Dublin
               </span>
             </div>
@@ -59,7 +60,7 @@
         <h5 class="friends__title">Plus friend</h5>
         <div class="friends__friend friend">
           <div class="friend__column">
-            <img src="Dublin.PNG" class="g-avatar friends__avatar" />
+            <img src="Dublin.PNG" class="friend__avatar" />
             <div class="friend__content">
               <span class="friend__name">
                 Plus Friend
@@ -72,7 +73,7 @@
         <h5 class="friends__title">Friends 14</h5>
         <li class="frieds__fried friend friend--lg">
           <div class="div friend__column">
-            <img src="Dublin.PNG" class="g-avatar friends__avatar" />
+            <img src="Dublin.PNG" class="friend__avatar" />
             <div class="friend__content">
               <span class="friend__name">
                 Dublin
@@ -84,8 +85,10 @@
           </div>
           <div class="friend__column">
             <div class="friend__now-listening">
-              <span>RYU (Hiryu)</span>
-              <i class="fas fa-play"></i>
+              <span>
+                RYU (Hiryu)
+                <i class="fas fa-play"></i>
+              </span>
             </div>
           </div>
         </li>
