--- a/chat.html
+++ b/chat.html
@@ -12,34 +12,36 @@
     <title>Chating</title>
   </head>
   <body class="chats-body">
-    <div class="status-bar">
-      <div class="status__column">
-      <span class="status-bar__clock">13:54</span>
-    </div>
-      <div class="status__column">
-        <i class="far fa-clock"></i>
-        <i class="fas fa-volume-mute"></i>
-        <i class="fas fa-wifi"></i>
-        <span class="status-bar__battery-level">100%</span>
-        <i class="fas fa-battery-full"></i>
-      </div>
-    </div>
-    <header class="header">
-      <div class="header__header-column">
-        <a href="index.html" class="header__back-btn">
-          <i class="fas fa-arrow-left"></i>
-        </a>
-        <h1 class="header__title">Chating</h1>
-      </div>
-      <div class="div header__header-column">
-        <span class="header__icon">
-          <i class="fas fa-search"></i>
-        </span>
-        <span class="header__icon">
-          <i class="fas fa-bars"></i>
-        </span>
-      </div>
-    </header>
+  <div class="header-wrapper">
+      <div class="status-bar">
+          <div class="status__column">
+          <span class="status-bar__clock">13:54</span>
+        </div>
+          <div class="status__column">
+            <i class="far fa-clock"></i>
+            <i class="fas fa-volume-mute"></i>
+            <i class="fas fa-wifi"></i>
+            <span class="status-bar__battery-level">100%</span>
+            <i class="fas fa-battery-full"></i>
+          </div>
+        </div>
+        <header class="header">
+          <div class="header__header-column">
+            <a href="index.html" class="header__back-btn">
+              <i class="fas fa-arrow-left"></i>
+            </a>
+            <h1 class="header__title">Chating</h1>
+          </div>
+          <div class="div header__header-column">
+            <span class="header__icon">
+              <i class="fas fa-search"></i>
+            </span>
+            <span class="header__icon">
+              <i class="fas fa-bars"></i>
+            </span>
+          </div>
+        </header>
+  </div>
     <main class="chat-screen">
       <ul class="chat__messages">
         <span class="chat__timestamp">Friday, January 11, 2019</span>
@@ -73,22 +75,21 @@
           </li>
       </ul>
     </main>
-    <div class="chat__write">
-      <div class="chat__write-column">
+    <div class="chat__write-container">
+      <input
+        class="chat__write"
+        type="text" 
+        placeholder="Send message" 
+        class="chat__write-input"
+      />
+      <div class="chat__icon-left chat__icon">
         <i class="far fa-plus-square"></i>
       </div>
-      <div class="chat__write-column">
-        <input
-          type="text"
-          placeholder="Send message"
-          class="chat__write-input /"
-        />
-      </div>
-      <div class="chat__write-column">
+      <div class="chat__icon-right chat__icon">
         <span class="chat__write-icon">
           <i class="far fa-smile-wink"></i>
         </span>
-        <span class="chat__write-icon">
+        <span class="chat__write-icon chat__icon">
           <i class="fas fa-microphone"></i>
         </span>
       </div>
